<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.iris</groupId>
    <artifactId>oh-boot</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>oh-boot</name>
    <description>用SpringBoot3.0、SpringSecurity6.0、Mybatis-Plus，Kafka等框架开发的一套SpringBoot低代码、多数据源后台开发平台</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.4</version>
    </parent>

    <modules>
        <!--<module>oh-system</module>-->
        <module>oh-module</module>
        <module>oh-framework</module>
        <module>oh-server</module>
    </modules>

    <properties>
        <!-- 系统版本 -->
        <revision>1.0.0</revision>
        <!-- 跳过测试打包 -->
        <skipTests>true</skipTests>
        <!-- 字符集 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- jdk 版本 -->
        <java.version>21</java.version>
        <!-- mysql jdbc 连接驱动 -->
        <mysql.jdbc.version>8.3.0</mysql.jdbc.version>
        <!-- mybatis-plus 版本 -->
        <mybatisplus.version>3.5.5</mybatisplus.version>
        <!-- 动态数据源 -->
        <dynamic.datasource.version>4.3.0</dynamic.datasource.version>
        <!-- nacos配置中心 -->
        <nacos.version>0.3.0-RC</nacos.version>
        <!-- swagger（xiaoymin版本）生成在线文档 -->
        <knife4j.version>4.5.0</knife4j.version>
        <!-- hutool 工具包 -->
        <hutool.version>5.8.25</hutool.version>
        <oshi.version>6.4.0</oshi.version>
        <!-- bean 拷贝 -->
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <!-- excel 工具 -->
        <easyexcel.version>3.3.4</easyexcel.version>
        <!-- 数据字典翻译 -->
        <easytrans.version>3.0.0</easytrans.version>
        <!-- svg 图片转换 -->
        <svg.trans.version>1.17</svg.trans.version>
        <!-- camunda 工作流相关 -->
        <camunda.version>7.20.0</camunda.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- mysql驱动 https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.jdbc.version}</version>
            </dependency>
            <!-- mybatis plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatisplus.version}</version>
            </dependency>
            <!-- 多数据源 https://mvnrepository.com/artifact/com.baomidou/dynamic-datasource-spring-boot3-starter -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
                <version>${dynamic.datasource.version}</version>
            </dependency>

            <!-- nacos 配置中心 https://mvnrepository.com/artifact/com.alibaba.boot/nacos-config-spring-boot-starter -->
            <dependency>
                <groupId>com.alibaba.boot</groupId>
                <artifactId>nacos-config-spring-boot-starter</artifactId>
                <version>${nacos.version}</version>
            </dependency>

            <!-- swagger（xiaoymin版本）生成在线文档 -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
            <!-- hutool工具,module中按需引入 -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-bom</artifactId>
                <version>${hutool.version}</version>
                <type>pom</type>
                <!-- 注意这里是import -->
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.github.oshi</groupId>
                <artifactId>oshi-core</artifactId>
                <version>${oshi.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <!-- excel操作 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <!-- 字典转义 -->
            <dependency>
                <groupId>com.fhs-opensource</groupId>
                <artifactId>easy-trans-spring-boot-starter</artifactId>
                <version>${easytrans.version}</version>
            </dependency>
            <!-- 字典转义 -->
            <dependency>
                <groupId>com.fhs-opensource</groupId>
                <artifactId>easy-trans-mybatis-plus-extend</artifactId>
                <version>${easytrans.version}</version>
            </dependency>
            <!-- 通用SVG代码转换器 -->
            <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-transcoder -->
            <dependency>
                <groupId>org.apache.xmlgraphics</groupId>
                <artifactId>batik-transcoder</artifactId>
                <version>${svg.trans.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-codec -->
            <dependency>
                <groupId>org.apache.xmlgraphics</groupId>
                <artifactId>batik-codec</artifactId>
                <version>${svg.trans.version}</version>
            </dependency>
            <!-- 工作流 https://mvnrepository.com/artifact/org.camunda.bpm.springboot/camunda-bpm-spring-boot-starter -->
            <dependency>
                <groupId>org.camunda.bpm.springboot</groupId>
                <artifactId>camunda-bpm-spring-boot-starter</artifactId>
                <version>${camunda.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>public</id>
            <name>阿里云公共仓库</name>
            <url>https://maven.aliyun.com/repository/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>阿里云公共仓库</name>
            <url>https://maven.aliyun.com/repository/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>